quid-payments/css/init.css
.quid-pay-buttons {
    margin: 30px 0px 0px !important;
    text-align: right !important;
}

.quid-pay-error {
    font-family: sans-serif;
    font-size: 15px;
    font-weight: bold;
    display: inline-flex;
    align-items: center;
    color: rgba(0, 0, 0, 0.6);
    border-radius: 4px;
    padding: 10px 20px;
    margin: 10px 0px;
    background-color: #eee;
    box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.2);
}

.quid-pay-error-image {
    height: 25px;
    margin-right: 20px;
}

.quid-slider-button-flex button {
    height: 100%;
}

.quid-slider-wrapper.quid-slider-default {
    margin: 0px 0px 0px auto;
    width: 175px;
}

.quid-pay-already-paid .quid-pay-button {
    background-color: transparent !important;
    box-shadow: none !important;
    color: rgba(0, 0, 0, 0.8) !important;
    margin-right: 2px;
}

.quid-pay-already-paid button.quid-pay-button.quid-pay-button-default:hover {
    background-color: #eee !important;
    filter: none !important;
}

.quid-pay-already-paid .quid-pay-button-icon {
    display: none !important;
}

